[package]
name = "unifrac"
version = "0.1.2"
description = "A crate for working with normalized fractional values."
authors = ["TheChilliPL <chilli@thechilli.dev>"]
repository = "https://github.com/TheChilliPL/unifrac"
license = "MIT"
categories = ["mathematics"]
keywords = ["math", "fraction", "normalized"]
edition = "2021"
publish = ["crates-io"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }